--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "homepage": "",
   "contributors": [],
   "bugs": { "url": "" },
-  "scripts": { "start": "nodemon app.js" },
+  "scripts": {
+    "start": "gulp"
+  },
   "dependencies": {
     "cnvs": "^1.1.7",
     "gulp-watch-less": "^1.0.1",
